--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charfset="utf-8">
   </head>
   <body>
+    <!--Приветствую-->
     <header class="main-header">
       <div class="container">
         <div class="index-logo">
